# feed-sorter

./: .gitignore  .railwayignore  CLAUDE.md  LICENSE  README.md  background.js  biome.json  content.js  injected.js  manifest.json  offscreen.html  offscreen.js  overlay.css  package-lock.json  package.json  playwright-test.mjs  playwright.config.js  rules.json  vitest.config.js
.gg/plans/: collect-respects-session-scope.md  managed-backend.md  pro-cloud-llm-routing.md  transcript-csv-classification.md  ui-cleanup-and-audio-download.md  youtube-shorts-collect.md
.github/workflows/: test.yml
apps/api/: drizzle.config.ts  package.json  tsconfig.json  vitest.config.ts
apps/web/: next.config.mjs  package.json  tsconfig.tsbuildinfo
docs/: FEATURES.md  UNIFIED_SCHEMA.md
scripts/: check-callback-handoff.mjs  check-extension.mjs  check-settings-modal.mjs  classify-csv.mjs  classify-test.mjs  cluster-niches.mjs  diagnose-sync.mjs  extension-fix.mjs  fs-explore.mjs  smoke-niche-cascade.mjs  vendor-transformers.mjs
sidecar/: pyproject.toml  requirements.txt  transcribe-server.py
src/: pipeline.js  store.js
src/analysis/: cover-analysis.js  creator-inheritance.js  diagnose.js  niche-cluster-posts.js  post-analysis.js  rewrite.js  voice-fingerprint.js
src/dashboard/: dashboard.css  dashboard.js  index.html  options.html  options.js  popup.html  popup.js
tests/: README.md
tmp/: classify-findings.md  classify-report-all-inherit.txt  classify-report-all.txt  classify-report-kent-inherit.txt  classify-report-kent.txt  cluster-report-filtered.txt  cluster-report.txt
(+191 files in other folders)
