[project]
name = "feed-sorter-sidecar"
version = "0.1.0"
description = "Local faster-whisper transcription server for the Feed Sorter extension."
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
  "SIM", # flake8-simplify
]
ignore = [
  "E501", # line length — handled by formatter
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
